puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Dashboard.Shell/content/Views/Dashboard/_ViewStart.cshtml.pp
@{
    Layout = "~/Views/Shared/_Folder.cshtml";
}